# feedback

./: CONTRIBUTING.md  README.md  add_envs.sh  docker-compose.yml  env.example
.github/workflows/: backend.yml  ci.yml  frontend.yml
backend/: .env_local  .gitignore  Dockerfile  add_envs.sh  docker-entrypoint.sh  pyproject.toml  setup.cfg
backend/src/: manage.py
backend/src/feedback/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/login/: admin.py  models.py
backend/src/login/migrations/: 0001_initial.py
backend/src/polls/: api.py  api_schemas.py  models.py  tests.py
backend/src/polls/migrations/: 0001_initial.py  0002_remove_pollquestion_end_message_text_and_more.py
backend/src/polls/utils/: storage.py
backend/src/users/: admin.py  api.py  api_schemas.py  auth.py  urls.py
backend/src/users/migrations/: 0001_initial.py
backend/src/utils/: logging_utils.py
environment/: local.env
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AppLayout.jsx  Button.jsx  LoginForm.jsx  LoginPage.jsx  MainNavBar.jsx  NavBar.jsx  ProtectedRoute.jsx  SurveyCard.jsx  SurveysCardTable.jsx
frontend/src/features/authentication/: LoginForm.jsx  jwtToken.js  localStorage.js  useLogin.js  useUser.js
frontend/src/pages/: Login.jsx  Surveys.jsx
frontend/src/services/: apiAuth.js
