[tool.poetry]
name = "feedback"
version = "0.1.0"
description = "feedback backend module"
authors = ["Vernadskii <d.vernadskii@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
